# Crossing-Road

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
assets/saves/: highscore.txt  load.txt
include/: Animal.h  Constants.h  Entity.h  Game.h  People.h  SharedState.h  TrafficLight.h  Vehicle.h  cBird.h  cCar.h  cConsole.h  cDino.h  cEnd.h  cIntro.h  cListObject.h  cLoad_HighScore.h  cMap.h  cMenu.h  cObject.h  cPeople.h  cSettings.h  cTruck.h
src/: Animal.cpp  Entity.cpp  Game.cpp  People.cpp  TrafficLight.cpp  Vehicle.cpp  cBird.cpp  cCar.cpp  cDino.cpp  cEnd.cpp  cIntro.cpp  cListObject.cpp  cLoad_HighScore.cpp  cMap.cpp  cMenu.cpp  cObject.cpp  cPeople.cpp  cSettings.cpp  cTruck.cpp  crossingRoad.cpp  main.cpp
